# paperarium-designer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.ce2948f  README.md  basename  main.cpp  mainwindow.cpp  mainwindow.h
build_files/cmake/platform/: platform_apple.cmake
include/: glcomponent.h  glmesh.h  globject.h  glscene.h  gltransform.h  mainwindow.h  openglwidget.h  render_common.h
include/example/: ThirdPersonEngine.h
include/example/01_statictriangle/: StaticTriangle.h
include/example/01_statictriangle/objects/: Triangle.h  TriangleShader.h  TriangleUniform.h
include/example/02_assimpmodel/: AssimpModel.h
include/vk/: QVulkanWindow.h  VkObject.h  VulkanBase.h  VulkanBaseEngine.h  VulkanBuffer.h  VulkanContext.h  VulkanDescriptorSet.h  VulkanFrameBuffer.h  VulkanPipelines.h  VulkanRenderPass.h  VulkanShader.h  VulkanVertexDescriptions.h
include/vk/common/: base_template.h
include/vk/template/camera/: ShadowCamera.h  ThirdPersonCamera.h
include/vk/template/mesh/: AssimpObject.h  VulkanCube.h  VulkanPlane.h
include/vk/template/texture/: VulkanTexture.h  VulkanTexture2D.h
include/vk/utils/: VulkanDebug.h  VulkanDevice.hpp  VulkanModel.hpp  VulkanSwapChain.h  VulkanUIOverlay.h  VulkanVertFragShader.h
include/vulkanengine/: QVulkanWindow.h  VulkanBase.h  VulkanContext.h  VulkanObject.h  VulkanWindow.h  render_common.h  vulkan_macro.h
include/vulkanengine/common/: filesystem_utils.h  vertex_struct.h
include/vulkanengine/core/: VulkanContext.h  VulkanDescriptorSet.h  VulkanVertexDescriptions.h
include/vulkanengine/template/: VkObject.h
include/vulkanengine/template/camera/: UniformCamera.h
include/vulkanengine/template/mesh/: MeshObject.h
include/vulkanengine/utils/: VulkanQtTools.h  VulkanSwapChain.hpp  VulkanTools.h
lang/: PaperariumDesign_en_US.ts
lib/framelesswindow/: framelesswindow.h  framelesswindow.mm
resources/: CMakeLists.txt
resources/fonts/: fonts.qrc
resources/shaders/: default.frag  default.vert  deferred_light.frag  deferred_light.vert  deferred_shading.frag  deferred_shading.vert  framebuffer_to_screen.frag  framebuffer_to_screen.vert  graphic_buffer.frag  graphic_buffer.vert  shaders.qrc  single_color.frag  single_color.vert
resources/shaders/01_statictriangle/: statictriangle.frag  statictriangle.frag.spv  statictriangle.vert  statictriangle.vert.spv
resources/shaders/02_assimpmodel/: line.frag.spv  line.vert.spv  quad.frag.spv  quad.vert.spv  scene.frag.spv  scene.vert.spv  shadow.vert.spv
resources/shaders/02_assimpmodel/glsl/: line.frag  line.vert  quad.frag  quad.vert  scene.frag  scene.vert  shadow.frag  shadow.vert
resources/shaders/base/: uioverlay.frag
resources/shaders/base/glsl/: uioverlay.vert
scripts/: compile_shaders.sh  format.sh
source/: CMakeLists.txt
source/paperarium/: CMakeLists.txt
source/paperarium/draw/: CMakeLists.txt  DRW_engine.h
source/paperarium/example/: ThirdPersonEngine.cpp
source/paperarium/example/01_statictriangle/: StaticTriangle.cpp
source/paperarium/example/01_statictriangle/objects/: Triangle.cpp  TriangleUniform.cpp
source/paperarium/example/02_assimpmodel/: AssimpModel.cpp
source/paperarium/gpu/: CMakeLists.txt  GPU_context.h  GPU_framebuffer.h  GPU_matrix.h  GPU_platform.h  GPU_texture.h  GPU_viewport.h
source/paperarium/gpu/intern/: gpu_backend.hh  gpu_common.h  gpu_context.cc  gpu_context_private.hh  gpu_framebuffer.cc  gpu_framebuffer_private.hh  gpu_matrix.cc  gpu_matrix_private.hh  gpu_platform.cc  gpu_platform_private.hh  gpu_texture.cc  gpu_texture_private.hh  gpu_viewport.c
source/paperarium/gpu/vulkan/: vk_backend.cc  vk_backend.hh  vk_context.cc  vk_context.hh  vk_device.cc  vk_device.hh  vk_framebuffer.cc  vk_framebuffer.hh  vk_initializers.hh  vk_swapchain.cc  vk_swapchain.hh  vk_texture.cc  vk_texture_private.hh  vk_tools.cc  vk_tools.h
source/paperarium/makesdna/: CMakeLists.txt  DNA_vec_types.h  DNA_view3d_types.h
source/paperarium/paperkernel/: CMakeLists.txt  PKE_context.h
source/paperarium/paperkernel/intern/: context.c
source/vk/: VulkanBase.cpp  VulkanBaseEngine.cpp  VulkanDescriptorSet.cpp  VulkanPipelines.cpp  VulkanRenderPass.cpp  VulkanSwapChain.cpp  VulkanTools.cpp  VulkanUIOverlay.cpp
source/vk/template/camera/: ShadowCamera.cpp  UniformCamera.cpp
source/vk/template/mesh/: AssimpObject.cpp  MeshObject.cpp  VulkanPlane.cpp
source/vk/template/texture/: VulkanTexture2D.cpp
src/: glcomponent.cpp  glmesh.cpp  globject.cpp  glscene.cpp  gltransform.cpp  mainwindow.cpp  openglwidget.cpp
src/example/: ThirdPersonEngine.cpp
src/example/01_statictriangle/objects/: TriangleShader.cpp
src/example/02_assimpmodel/: AssimpModel.cpp
src/vk/: QVulkanWindow.cpp  VulkanBase.cpp  VulkanBaseEngine.cpp  VulkanBuffer.cpp  VulkanDescriptorSet.cpp  VulkanFrameBuffer.cpp  VulkanPipelines.cpp  VulkanQtTools.cpp  VulkanShader.cpp  VulkanUIOverlay.cpp
src/vk/template/mesh/: AssimpObject.cpp  VulkanCube.cpp
src/vulkan/: QVulkanWindow.cpp  VulkanBaseEngine.cpp  VulkanBase_win32.cpp  VulkanBase_xcb.cpp  VulkanWindow.cpp  vulkanbase.cpp
src/vulkan/core/: VulkanDescriptorSet.cpp  VulkanPipelines.cpp
src/vulkan/template/: VulkanShader.cpp
src/vulkan/template/camera/: UniformCamera.cpp
src/vulkan/utils/: VulkanSwapChain.cpp  VulkanTools.cpp  VulkanUIOverlay.cpp
test/models/: lloid.mtl
ui/: mainwindow.ui
